[package]
name = "todo-list"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }